Fixed alignment bug

--- a/src/components/placeholder.scss
+++ b/src/components/placeholder.scss
@@ -4,6 +4,7 @@
     height: 170px;
     width: 160px;
     margin: auto;
+    margin-top: 0px;
     background-color: $placeholder-color;
     border-radius: 120px;
     margin-bottom: 12px;
